[重构] 收敛 MCP 与运行时编排层冗余主链